--- a/trunk/doc/html/slurmstyles.css
+++ b/trunk/doc/html/slurmstyles.css
@@ -1,6 +1,6 @@
 h2 {  font-family: Arial, Verdana, sans-serif; font-size: 16px; font-weight: bold; color: #6699CC;  text-align: center; }
 h3 {  font-family: Arial, Verdana, sans-serif; font-size: 14px; font-weight: bold; color: #6699CC}
-h4 {  font-family: Arial, Verdana, sans-serif; font-size: 12px; font-weight: bold; color: #000000}
+h4 {  font-family: Arial, Verdana, sans-serif; font-size: 12px; font-weight: bold; color: #6699CC}
 p,ol,ul,li,td {  font-family: Arial, Verdana, sans-serif; font-size: 12px; color: #000000}
 pre {  font-family: "Courier New", Courier, mono; font-size: 12px; color: #000000}
 .whitetext {  font-family: Arial, Verdana, sans-serif; font-size: 12px; font-weight: bold; color: #FFFFFF}
